k8s/hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  namespace: jupyterhub
spec:
  selector:
    app: jupyterhub      # doit matcher le label du Pod Hub
  ports:
  - name: hub
    port: 8081           # port interne API Hub
    targetPort: 8000     # port du container Hub
  type: ClusterIP       # acces interne pour le proxy
