k8s/jhub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  namespace: jupyterhub
spec:
  ingressClassName: nginx
  rules:
  - host: jupyterhub.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hub
            port:
              number: 8000
